@@ -1,3 +1,15 @@
+2005-11-16  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Geoff.
+
+	Updated to use new API to drop all locks.
+
+        * JavaScriptGlue.cpp:
+        (JSLockInterpreter):
+        (JSUnlockInterpreter):
+        * UserObjectImp.cpp:
+        (UserObjectImp::callAsFunction):
+
 2005-11-14  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by mjs.
